--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "tiny-invariant": "^1.3.3",
     "vite-plugin-svgr": "^4.2.0",
