--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-query-devtools": "^5.54.1",
     "@tiptap/extension-highlight": "^2.8.0",
+    "@tiptap/extension-image": "^2.9.1",
     "@tiptap/extension-link": "^2.8.0",
     "@tiptap/extension-subscript": "^2.8.0",
     "@tiptap/extension-superscript": "^2.8.0",
@@ -62,6 +63,7 @@
     "dinero.js": "^2.0.0-alpha.14",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.2.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.5.2",
     "jodit-react": "^4.1.2",
     "libphonenumber-js": "^1.11.7",
@@ -81,6 +83,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "tiny-invariant": "^1.3.3",
+    "uuid": "^11.0.2",
     "vite-plugin-svgr": "^4.2.0",
     "zod": "^3.23.8"
   },
